# LykovExtPostgreSQL

./: CMakeLists.txt  CMakePresets.json  LykovExtPostgreSQL.cpp  LykovExtPostgreSQL.h  lykovExtPostgreSQL.def  lykovExtPostgreSQL.rc
include/: globalFunctions.h  lykovExtPostgreSQL.h  stdafx.h
src/: dllmain.c  globalFunctions.c  lykovExtPostgreSQL.c
